libhocr (0.10.7)

 * hocr-gtk save session parameters
 * use libtiff for black and white 
   hocr-pixbuf export and import using tiff format

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 24 Apr 2008 09:04
 
libhocr (0.10.6)

 * hocr-gtk example less path dependent (use sys.prefix)
 * hocr-gtk example can use tesseract-ocr if present
 * hocr-gtk example can use python-imaging-sane if present to scan images
   from a scanner
 * use libtiff for hocr-bitmap export using tiff format
 * python-hocr does not include hocr-gtk

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Wednesday, 22 Apr 2008 21:04
 
libhocr (0.10.5)

 * fine tune font recognition
 * add wrapper functions
 * add c++ wrapper class
 * add hocr-gtk example (using glade, pygtk and hocr-python)

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Saturday, 26 Jan 2008 21:04

libhocr (0.10.4)

 * change licence to GPL3
 * fine tune options for segmentation functions
 * fine tune reading order functions
 * remove web interface
 * fix pbm load bug (patch: Mikael Ylikoski <ordbrand@gmail.com>)
 * add rotation functions
 * re-add examples (hocr example requers gtk)
 * re-add python bindings (now requires gtk)

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Monday, 14 May 2007 18:12
 
libhocr (0.10.3)

 * font segmentation functions
 * font recognition functions
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Monday, 4 March 2007 12:02

libhocr (0.10.2)

 * paragraph segmentation functions
 * line segmentation functions
 * word segmentation functions
 * reading order sorting functions
 * add php web interface 
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 15 February 2007 19:12
 
libhocr (0.10.1)

 * internal image loader can load pnm P6, P5, P4 images
 * internal image saver can save pnm P6, P5 images
 * new functions for color and gray scale images 
 * gtk related functions move to libhocrgtk

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Tuesday, 16 Jan 2007 20:10

libhocr (0.10.0)

 * new API